--- a/index.html
+++ b/index.html
@@ -108,15 +108,16 @@
             const artworks = [
                 {
                     id: 1,
-                    title: "Sunset Dreams",
+                    title: "Father Clithord",
                     artist: "Lissa Belyea",
-                    price: 1200,
-                    medium: "Oil on Canvas",
-                    size: "24\" x 36\"",
-                    year: "2024",
-                    image: "https://via.placeholder.com/800x800/FF6B6B/FFFFFF?text=Artwork+1",
-                    description: "A vibrant exploration of color and light capturing the essence of twilight.",
+                    price: 0, // set correct price
+                    medium: "Oil on Canvas", // change if different
+                    size: "12\" x 10\"", // set correct size
+                    year: "2023", // set correct year
+                    image: "images/Father_clithord.jpg",
+                    description: "Blessed are the misbehaved Women.",
                     available: true
+
                 },
                 {
                     id: 2,
