Fix image file extension from .jpg to .jpeg

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     medium: "Oil on Canvas", // change if different
                     size: "12\" x 10\"", // set correct size
                     year: "2023", // set correct year
-                    image: "images/Father_clithord.jpg",
+                    image: "images/Father_clithord.jpeg",
                     description: "Blessed are the misbehaved Women.",
                     available: true
 
