--- a/index.html
+++ b/index.html
@@ -120,16 +120,17 @@
 
                 },
                 {
-                    id: 2,
-                    title: "Urban Pulse",
-                    artist: "Lissa Belyea",
-                    price: 950,
-                    medium: "Acrylic on Canvas",
-                    size: "20\" x 30\"",
-                    year: "2024",
-                    image: "https://via.placeholder.com/800x800/4ECDC4/FFFFFF?text=Artwork+2",
-                    description: "Dynamic cityscape reflecting the energy of metropolitan life.",
-                    available: true
+                   id: 2,
+                   title: "Heaven",
+                   artist: "Lissa Belyea",
+                   price: 500, // add the price when ready
+                   medium: "Oil on Canvas",
+                   size: "10\" x 12\"",
+                   year: "2022–2025",
+                   image: "images/Heaven.jpeg",
+                   description: "“The soul should always stand ajar, ready to welcome the ecstatic experience.” — Emily Dickinson",
+                   available: true
+
                 },
                 {
                     id: 3,
