--- a/index.html
+++ b/index.html
@@ -133,16 +133,17 @@
 
                 },
                 {
-                    id: 3,
-                    title: "Ethereal Waters",
-                    artist: "Lissa Belyea",
-                    price: 1500,
-                    medium: "Oil on Canvas",
-                    size: "30\" x 40\"",
-                    year: "2023",
-                    image: "https://via.placeholder.com/800x800/45B7D1/FFFFFF?text=Artwork+3",
-                    description: "A serene meditation on the fluidity and power of water.",
-                    available: true
+               id: 3,
+               title: "Grovy Vagi",
+               artist: "Lissa Belyea",
+               price: 300, // update when ready
+               medium: "Oil on Canvas",
+               size: "10\" x 12\"",
+               year: "2022–2025",
+               image: "images/grovy_vagi.jpeg",
+               description: "“You alone are enough. You have nothing to prove to anybody.” — Maya Angelou",
+               available: true
+
                 },
                 {
                     id: 4,
