--- a/index.html
+++ b/index.html
@@ -146,16 +146,17 @@
 
                 },
                 {
-                    id: 4,
-                    title: "Golden Hour",
-                    artist: "Lissa Belyea",
-                    price: 850,
-                    medium: "Watercolor",
-                    size: "18\" x 24\"",
-                    year: "2024",
-                    image: "https://via.placeholder.com/800x800/F7DC6F/FFFFFF?text=Artwork+4",
-                    description: "Delicate brushwork capturing the magic of late afternoon light.",
-                    available: true
+                id: 4,
+                title: "Moons Bleed",
+                artist: "Lissa Belyea",
+                price: 200, // update when ready
+                medium: "Oil on Canvas",
+                size: "10\" x 12\"",
+                year: "2022",
+                image: "images/moons_bleed.jpeg",
+                description: "“We have all walked in darkness, now let us walk in the light.” — Eleanor Roosevelt",
+                available: true
+
                 },
                 {
                     id: 5,
