--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lissa Belyea - Contemporary Art Gallery</title>
+    <title> - Contemporary Art Gallery</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -109,7 +109,7 @@
                 {
                     id: 1,
                     title: "Father Clithord",
-                    artist: "Lissa Belyea",
+                    artist: "",
                     price: 10000, // set correct price
                     medium: "Oil on Canvas", // change if different
                     size: "12\" x 10\"", // set correct size
@@ -122,7 +122,7 @@
                 {
                    id: 2,
                    title: "Heaven",
-                   artist: "Lissa Belyea",
+                   artist: "",
                    price: 500, // add the price when ready
                    medium: "Oil on Canvas",
                    size: "10\" x 12\"",
@@ -135,7 +135,7 @@
                 {
                id: 3,
                title: "Grovy Vagi",
-               artist: "Lissa Belyea",
+               artist: "",
                price: 300, // update when ready
                medium: "Oil on Canvas",
                size: "10\" x 12\"",
@@ -148,7 +148,7 @@
                 {
                 id: 4,
                 title: "Moons Bleed",
-                artist: "Lissa Belyea",
+                artist: "",
                 price: 200, // update when ready
                 medium: "Oil on Canvas",
                 size: "10\" x 12\"",
@@ -161,7 +161,7 @@
                 {
                     id: 5,
                     title: "Abstract Harmony",
-                    artist: "Lissa Belyea",
+                    artist: "",
                     price: 1100,
                     medium: "Mixed Media",
                     size: "24\" x 24\"",
@@ -173,7 +173,7 @@
                 {
                     id: 6,
                     title: "Mountain Majesty",
-                    artist: "Lissa Belyea",
+                    artist: "",
                     price: 1800,
                     medium: "Oil on Canvas",
                     size: "36\" x 48\"",
