--- a/index.html
+++ b/index.html
@@ -530,3 +530,168 @@
                                                     required
                                                     value={contactForm.subject}
                                                     onChange={(e) => setContactForm({...contactForm, subject: e.target.value})}
+                                                    className="w-full px-4 py-3 border-2 border-purple-200 rounded-xl focus:border-purple-500 focus:outline-none text-lg"
+                                                placeholder="What's on your mind? 💭"
+                                            />
+                                        </div>
+                                        <div>
+                                            <label className="block text-gray-700 font-bold mb-2 text-lg">Message</label>
+                                            <textarea
+                                                required
+                                                value={contactForm.message}
+                                                onChange={(e) => setContactForm({...contactForm, message: e.target.value})}
+                                                rows="5"
+                                                className="w-full px-4 py-3 border-2 border-purple-200 rounded-xl focus:border-purple-500 focus:outline-none text-lg"
+                                                placeholder="Tell us your story... 💖"
+                                            ></textarea>
+                                        </div>
+                                        <button
+                                            type="submit"
+                                            className="w-full gradient-purple-orange text-white py-4 rounded-xl hover:scale-105 transition-transform font-bold text-xl shadow-lg"
+                                        >
+                                            Send Message 💌
+                                        </button>
+                                    </form>
+                                )}
+                            </div>
+                        </div>
+                    </div>
+                )}
+
+                {/* Shopping Cart Sidebar */}
+                {showCart && (
+                    <div className="fixed inset-0 z-50 overflow-hidden">
+                        <div className="absolute inset-0 bg-black bg-opacity-50" onClick={() => setShowCart(false)} />
+                        <div className="absolute right-0 top-0 bottom-0 w-full max-w-md bg-gradient-to-br from-purple-50 to-pink-50 shadow-2xl flex flex-col">
+                            <div className="gradient-purple-orange p-6 flex justify-between items-center">
+                                <h2 className="text-3xl font-bold text-white">🛒 Your Cart</h2>
+                                <button onClick={() => setShowCart(false)} className="text-white hover:scale-110 transition-transform">
+                                    <X size={28} />
+                                </button>
+                            </div>
+                            
+                            <div className="flex-1 overflow-y-auto p-6">
+                                {cart.length === 0 ? (
+                                    <div className="text-center mt-20">
+                                        <div className="text-6xl mb-4">🛍️</div>
+                                        <p className="text-gray-500 text-xl">Your cart is empty</p>
+                                    </div>
+                                ) : (
+                                    <div className="space-y-4">
+                                        {cart.map(item => (
+                                            <div key={item.id} className="flex gap-4 bg-white p-4 rounded-2xl shadow-lg">
+                                                <img src={item.image} alt={item.title} className="w-24 h-24 object-cover rounded-xl" />
+                                                <div className="flex-1">
+                                                    <h3 className="font-bold text-gray-900 text-lg">{item.title}</h3>
+                                                    <p className="text-purple-600 font-semibold">${item.price.toLocaleString()}</p>
+                                                    <div className="flex items-center gap-3 mt-2">
+                                                        <button
+                                                            onClick={() => updateQuantity(item.id, -1)}
+                                                            className="w-8 h-8 flex items-center justify-center bg-purple-200 rounded-lg hover:bg-purple-300 transition-colors"
+                                                        >
+                                                            <Minus size={16} />
+                                                        </button>
+                                                        <span className="font-bold text-lg">{item.quantity}</span>
+                                                        <button
+                                                            onClick={() => updateQuantity(item.id, 1)}
+                                                            className="w-8 h-8 flex items-center justify-center bg-purple-200 rounded-lg hover:bg-purple-300 transition-colors"
+                                                        >
+                                                            <Plus size={16} />
+                                                        </button>
+                                                        <button
+                                                            onClick={() => removeFromCart(item.id)}
+                                                            className="ml-auto text-red-500 hover:text-red-700 font-semibold"
+                                                        >
+                                                            Remove
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        ))}
+                                    </div>
+                                )}
+                            </div>
+
+                            {cart.length > 0 && (
+                                <div className="border-t border-purple-200 p-6 bg-white">
+                                    <div className="flex justify-between items-center mb-6">
+                                        <span className="text-xl font-bold">Total:</span>
+                                        <span className="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-pink-600">
+                                            ${cartTotal.toLocaleString()}
+                                        </span>
+                                    </div>
+                                    <button className="w-full gradient-purple-orange text-white py-4 rounded-2xl hover:scale-105 transition-transform font-bold text-xl shadow-lg">
+                                        Checkout Now 💳
+                                    </button>
+                                </div>
+                            )}
+                        </div>
+                    </div>
+                )}
+
+                {/* Artwork Detail Modal */}
+                {selectedArt && (
+                    <div className="fixed inset-0 z-50 overflow-y-auto bg-black bg-opacity-75 flex items-center justify-center p-4">
+                        <div className="bg-white rounded-3xl max-w-5xl w-full max-h-[90vh] overflow-y-auto shadow-2xl">
+                            <div className="sticky top-0 gradient-purple-orange p-6 flex justify-between items-center rounded-t-3xl">
+                                <h2 className="text-3xl font-bold text-white">{selectedArt.title}</h2>
+                                <button onClick={() => setSelectedArt(null)} className="text-white hover:scale-110 transition-transform">
+                                    <X size={28} />
+                                </button>
+                            </div>
+                            <div className="p-8">
+                                <div className="grid md:grid-cols-2 gap-10">
+                                    <div>
+                                        <div className="rounded-2xl overflow-hidden shadow-2xl">
+                                            <img 
+                                                src={selectedArt.image} 
+                                                alt={selectedArt.title}
+                                                className="w-full"
+                                            />
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p className="text-gray-700 mb-6 text-lg leading-relaxed">{selectedArt.description}</p>
+                                        <div className="space-y-4 mb-8">
+                                            <div className="flex justify-between border-b-2 border-purple-100 pb-3">
+                                                <span className="font-bold text-gray-700">Artist:</span>
+                                                <span className="text-purple-600 font-semibold">{selectedArt.artist}</span>
+                                            </div>
+                                            <div className="flex justify-between border-b-2 border-purple-100 pb-3">
+                                                <span className="font-bold text-gray-700">Medium:</span>
+                                                <span className="text-purple-600 font-semibold">{selectedArt.medium}</span>
+                                            </div>
+                                            <div className="flex justify-between border-b-2 border-purple-100 pb-3">
+                                                <span className="font-bold text-gray-700">Size:</span>
+                                                <span className="text-purple-600 font-semibold">{selectedArt.size}</span>
+                                            </div>
+                                            <div className="flex justify-between border-b-2 border-purple-100 pb-3">
+                                                <span className="font-bold text-gray-700">Price:</span>
+                                                <span className="text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-pink-600">
+                                                    ${selectedArt.price.toLocaleString()}
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <button
+                                            onClick={() => {
+                                                addToCart(selectedArt);
+                                                setSelectedArt(null);
+                                                setShowCart(true);
+                                            }}
+                                            className="w-full gradient-purple-orange text-white py-5 rounded-2xl hover:scale-105 transition-transform font-bold text-xl shadow-lg"
+                                        >
+                                            Add to Cart 🛒
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                )}
+            </div>
+        );
+    };
+
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(<ArtGallery />);
+</script>
