--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     medium: "Oil on Canvas",
                     size: "24\" x 36\"",
                     image: "./images/artwork1.jpg",
+                    description: "A vibrant exploration of color and light capturing the essence of twilight.",
                     quote: artistQuotes[0]
                 },
                 {
@@ -96,6 +97,7 @@
                     medium: "Acrylic on Canvas",
                     size: "20\" x 30\"",
                     image: "./images/artwork2.jpg",
+                    description: "Dynamic cityscape reflecting the energy of metropolitan life.",
                     quote: artistQuotes[1]
                 },
                 {
@@ -106,6 +108,7 @@
                     medium: "Oil on Canvas",
                     size: "30\" x 40\"",
                     image: "./images/artwork3.jpg",
+                    description: "A serene meditation on the fluidity and power of water.",
                     quote: artistQuotes[2]
                 },
                 {
@@ -116,6 +119,7 @@
                     medium: "Watercolor",
                     size: "18\" x 24\"",
                     image: "./images/artwork4.jpg",
+                    description: "Delicate brushwork capturing the magic of late afternoon light.",
                     quote: artistQuotes[3]
                 },
                 {
@@ -126,6 +130,7 @@
                     medium: "Mixed Media",
                     size: "24\" x 24\"",
                     image: "./images/artwork5.jpg",
+                    description: "Bold geometric forms dancing in perfect compositional balance.",
                     quote: artistQuotes[4]
                 },
                 {
@@ -136,6 +141,7 @@
                     medium: "Oil on Canvas",
                     size: "36\" x 48\"",
                     image: "./images/artwork6.jpg",
+                    description: "Majestic peaks rendered with dramatic light and atmospheric depth.",
                     quote: artistQuotes[5]
                 }
             ];
@@ -191,6 +197,7 @@
 
             return (
                 <div className="min-h-screen bg-gradient-to-br from-slate-50 to-slate-100">
+                    {/* Header */}
                     <header className="bg-white shadow-md sticky top-0 z-40">
                         <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
                             <div className="flex justify-between items-center">
@@ -223,6 +230,7 @@
                         </div>
                     </header>
 
+                    {/* Main Content */}
                     <main className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
                         <div className="mb-12 text-center">
                             <p className="text-lg text-gray-700 max-w-3xl mx-auto">
@@ -231,6 +239,7 @@
                             </p>
                         </div>
 
+                        {/* Art Grid */}
                         <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                             {artworks.map(art => (
                                 <div 
@@ -251,7 +260,7 @@
                                     <div className="p-6">
                                         <h3 className="text-xl font-bold text-gray-900 mb-2">{art.title}</h3>
                                         <p className="text-gray-600 text-sm mb-3">{art.medium} • {art.size}</p>
-                                        <blockquote className="text-xs italic text-gray-500 mb-3 border-l-2 border-slate-300 pl-3">
+                                        <blockquote className="text-xs italic text-gray-500 mb-3 border-l-2 border-gray-300 pl-3">
                                             "{art.quote.quote}" — {art.quote.artist}
                                         </blockquote>
                                         <div className="flex justify-between items-center">
@@ -424,7 +433,8 @@
                                             />
                                         </div>
                                         <div>
-                                            <blockquote className="text-sm italic text-gray-600 mb-6 border-l-4 border-slate-900 pl-4 py-2 bg-gray-50 rounded-r">
+                                            <p className="text-gray-700 mb-4">{selectedArt.description}</p>
+                                            <blockquote className="text-sm italic text-gray-600 mb-6 border-l-4 border-slate-900 pl-4 py-2">
                                                 "{selectedArt.quote.quote}"
                                                 <footer className="text-xs font-semibold text-slate-900 mt-2">— {selectedArt.quote.artist}</footer>
                                             </blockquote>
