--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/babel">
         const { useState } = React;
 
-        // Icons
+        // Lucide React Icons as inline SVG components
         const ShoppingCart = ({ size = 24 }) => (
             <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
                 <circle cx="9" cy="21" r="1"></circle>
@@ -44,38 +44,10 @@
             </svg>
         );
 
-        const Mail = ({ size = 24 }) => (
-            <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
-                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                <polyline points="22,6 12,13 2,6"></polyline>
-            </svg>
-        );
-
         const ArtGallery = () => {
             const [cart, setCart] = useState([]);
             const [showCart, setShowCart] = useState(false);
             const [selectedArt, setSelectedArt] = useState(null);
-            const [showContact, setShowContact] = useState(false);
-            const [formData, setFormData] = useState({ name: '', email: '', message: '' });
-            const [formStatus, setFormStatus] = useState('');
-
-            const artistQuotes = [
-                { quote: "I paint flowers so they will not die.", artist: "Frida Kahlo" },
-                { quote: "Feet, what do I need you for when I have wings to fly?", artist: "Frida Kahlo" },
-                { quote: "I am my own muse, I am the subject I know best.", artist: "Frida Kahlo" },
-                { quote: "Take a lover who looks at you like maybe you are magic.", artist: "Frida Kahlo" },
-                { quote: "I tried to drown my sorrows, but the bastards learned how to swim.", artist: "Frida Kahlo" },
-                { quote: "Art is the only way to run away without leaving home.", artist: "Twyla Tharp" },
-                { quote: "I found I could say things with color that I couldn't say any other way.", artist: "Georgia O'Keeffe" },
-                { quote: "Nobody sees a flower really; it is so small. We haven't time, and to see takes time.", artist: "Georgia O'Keeffe" },
-                { quote: "To create one's world in any of the arts takes courage.", artist: "Georgia O'Keeffe" },
-                { quote: "I've been absolutely terrified every moment of my life and I've never let it keep me from doing a single thing.", artist: "Georgia O'Keeffe" },
-                { quote: "Painting is stronger than me, it makes me do its bidding.", artist: "Joan Mitchell" },
-                { quote: "I carry my landscapes around with me.", artist: "Joan Mitchell" },
-                { quote: "Art is a guaranty of sanity.", artist: "Louise Bourgeois" },
-                { quote: "I do not have fears. I have ethics.", artist: "Louise Bourgeois" },
-                { quote: "An artist's duty is rather to stay open-minded and in a state where they can receive information and inspiration.", artist: "Yayoi Kusama" }
-            ];
 
             const artworks = [
                 {
@@ -85,9 +57,8 @@
                     price: 1200,
                     medium: "Oil on Canvas",
                     size: "24\" x 36\"",
-                    image: "./images/artwork1.jpg",
-                    description: "A vibrant exploration of color and light capturing the essence of twilight.",
-                    quote: artistQuotes[0]
+                    image: "https://via.placeholder.com/800x800/FF6B6B/FFFFFF?text=Artwork+1",
+                    description: "A vibrant exploration of color and light capturing the essence of twilight."
                 },
                 {
                     id: 2,
@@ -96,9 +67,8 @@
                     price: 950,
                     medium: "Acrylic on Canvas",
                     size: "20\" x 30\"",
-                    image: "./images/artwork2.jpg",
-                    description: "Dynamic cityscape reflecting the energy of metropolitan life.",
-                    quote: artistQuotes[1]
+                    image: "https://via.placeholder.com/800x800/4ECDC4/FFFFFF?text=Artwork+2",
+                    description: "Dynamic cityscape reflecting the energy of metropolitan life."
                 },
                 {
                     id: 3,
@@ -107,9 +77,8 @@
                     price: 1500,
                     medium: "Oil on Canvas",
                     size: "30\" x 40\"",
-                    image: "./images/artwork3.jpg",
-                    description: "A serene meditation on the fluidity and power of water.",
-                    quote: artistQuotes[2]
+                    image: "https://via.placeholder.com/800x800/45B7D1/FFFFFF?text=Artwork+3",
+                    description: "A serene meditation on the fluidity and power of water."
                 },
                 {
                     id: 4,
@@ -118,9 +87,8 @@
                     price: 850,
                     medium: "Watercolor",
                     size: "18\" x 24\"",
-                    image: "./images/artwork4.jpg",
-                    description: "Delicate brushwork capturing the magic of late afternoon light.",
-                    quote: artistQuotes[3]
+                    image: "https://via.placeholder.com/800x800/F7DC6F/FFFFFF?text=Artwork+4",
+                    description: "Delicate brushwork capturing the magic of late afternoon light."
                 },
                 {
                     id: 5,
@@ -129,9 +97,8 @@
                     price: 1100,
                     medium: "Mixed Media",
                     size: "24\" x 24\"",
-                    image: "./images/artwork5.jpg",
-                    description: "Bold geometric forms dancing in perfect compositional balance.",
-                    quote: artistQuotes[4]
+                    image: "https://via.placeholder.com/800x800/BB8FCE/FFFFFF?text=Artwork+5",
+                    description: "Bold geometric forms dancing in perfect compositional balance."
                 },
                 {
                     id: 6,
@@ -140,9 +107,8 @@
                     price: 1800,
                     medium: "Oil on Canvas",
                     size: "36\" x 48\"",
-                    image: "./images/artwork6.jpg",
-                    description: "Majestic peaks rendered with dramatic light and atmospheric depth.",
-                    quote: artistQuotes[5]
+                    image: "https://via.placeholder.com/800x800/85C1E2/FFFFFF?text=Artwork+6",
+                    description: "Majestic peaks rendered with dramatic light and atmospheric depth."
                 }
             ];
 
@@ -173,31 +139,11 @@
                 setCart(cart.filter(item => item.id !== id));
             };
 
-            const handleContactSubmit = async (e) => {
-                e.preventDefault();
-                setFormStatus('sending');
-
-                const emailBody = `Name: ${formData.name}%0D%0AEmail: ${formData.email}%0D%0AMessage: ${formData.message}`;
-                const mailtoLink = `mailto:bobshoney@protonmail.com?subject=Art Gallery Inquiry from ${encodeURIComponent(formData.name)}&body=${emailBody}`;
-                
-                window.location.href = mailtoLink;
-                
-                setTimeout(() => {
-                    setFormStatus('success');
-                    setFormData({ name: '', email: '', message: '' });
-                    setTimeout(() => {
-                        setShowContact(false);
-                        setFormStatus('');
-                    }, 2000);
-                }, 500);
-            };
-
             const cartTotal = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
             const cartCount = cart.reduce((sum, item) => sum + item.quantity, 0);
 
             return (
                 <div className="min-h-screen bg-gradient-to-br from-slate-50 to-slate-100">
-                    {/* Header */}
                     <header className="bg-white shadow-md sticky top-0 z-40">
                         <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
                             <div className="flex justify-between items-center">
@@ -205,32 +151,22 @@
                                     <h1 className="text-3xl font-bold text-gray-900">Lissa Belyea</h1>
                                     <p className="text-gray-600 mt-1">Contemporary Artist</p>
                                 </div>
-                                <div className="flex gap-3">
-                                    <button
-                                        onClick={() => setShowContact(true)}
-                                        className="bg-slate-900 text-white px-6 py-3 rounded-lg hover:bg-slate-800 transition-colors flex items-center gap-2"
-                                    >
-                                        <Mail size={20} />
-                                        <span>Contact</span>
-                                    </button>
-                                    <button
-                                        onClick={() => setShowCart(!showCart)}
-                                        className="relative bg-slate-900 text-white px-6 py-3 rounded-lg hover:bg-slate-800 transition-colors flex items-center gap-2"
-                                    >
-                                        <ShoppingCart size={20} />
-                                        <span>Cart</span>
-                                        {cartCount > 0 && (
-                                            <span className="absolute -top-2 -right-2 bg-red-500 text-white rounded-full w-6 h-6 flex items-center justify-center text-sm font-bold">
-                                                {cartCount}
-                                            </span>
-                                        )}
-                                    </button>
-                                </div>
+                                <button
+                                    onClick={() => setShowCart(!showCart)}
+                                    className="relative bg-slate-900 text-white px-6 py-3 rounded-lg hover:bg-slate-800 transition-colors flex items-center gap-2"
+                                >
+                                    <ShoppingCart size={20} />
+                                    <span>Cart</span>
+                                    {cartCount > 0 && (
+                                        <span className="absolute -top-2 -right-2 bg-red-500 text-white rounded-full w-6 h-6 flex items-center justify-center text-sm font-bold">
+                                            {cartCount}
+                                        </span>
+                                    )}
+                                </button>
                             </div>
                         </div>
                     </header>
 
-                    {/* Main Content */}
                     <main className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
                         <div className="mb-12 text-center">
                             <p className="text-lg text-gray-700 max-w-3xl mx-auto">
@@ -239,7 +175,6 @@
                             </p>
                         </div>
 
-                        {/* Art Grid */}
                         <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                             {artworks.map(art => (
                                 <div 
@@ -252,17 +187,11 @@
                                             src={art.image} 
                                             alt={art.title}
                                             className="w-full h-full object-cover hover:scale-105 transition-transform duration-300"
-                                            onError={(e) => {
-                                                e.target.src = `https://via.placeholder.com/800x800/FF6B6B/FFFFFF?text=${art.title}`;
-                                            }}
                                         />
                                     </div>
                                     <div className="p-6">
                                         <h3 className="text-xl font-bold text-gray-900 mb-2">{art.title}</h3>
                                         <p className="text-gray-600 text-sm mb-3">{art.medium} • {art.size}</p>
-                                        <blockquote className="text-xs italic text-gray-500 mb-3 border-l-2 border-gray-300 pl-3">
-                                            "{art.quote.quote}" — {art.quote.artist}
-                                        </blockquote>
                                         <div className="flex justify-between items-center">
                                             <span className="text-2xl font-bold text-slate-900">${art.price.toLocaleString()}</span>
                                             <button
@@ -281,70 +210,6 @@
                         </div>
                     </main>
 
-                    {/* Contact Modal */}
-                    {showContact && (
-                        <div className="fixed inset-0 z-50 overflow-y-auto bg-black bg-opacity-75 flex items-center justify-center p-4">
-                            <div className="bg-white rounded-xl max-w-2xl w-full">
-                                <div className="border-b p-6 flex justify-between items-center">
-                                    <h2 className="text-2xl font-bold">Contact Us</h2>
-                                    <button onClick={() => setShowContact(false)} className="text-gray-500 hover:text-gray-700">
-                                        <X size={24} />
-                                    </button>
-                                </div>
-                                <form onSubmit={handleContactSubmit} className="p-6">
-                                    <div className="space-y-4">
-                                        <div>
-                                            <label className="block text-sm font-semibold text-gray-700 mb-2">Name</label>
-                                            <input
-                                                type="text"
-                                                required
-                                                value={formData.name}
-                                                onChange={(e) => setFormData({...formData, name: e.target.value})}
-                                                className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-slate-900 focus:border-transparent"
-                                                placeholder="Your name"
-                                            />
-                                        </div>
-                                        <div>
-                                            <label className="block text-sm font-semibold text-gray-700 mb-2">Email</label>
-                                            <input
-                                                type="email"
-                                                required
-                                                value={formData.email}
-                                                onChange={(e) => setFormData({...formData, email: e.target.value})}
-                                                className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-slate-900 focus:border-transparent"
-                                                placeholder="your@email.com"
-                                            />
-                                        </div>
-                                        <div>
-                                            <label className="block text-sm font-semibold text-gray-700 mb-2">Message</label>
-                                            <textarea
-                                                required
-                                                value={formData.message}
-                                                onChange={(e) => setFormData({...formData, message: e.target.value})}
-                                                rows="5"
-                                                className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-slate-900 focus:border-transparent"
-                                                placeholder="Tell us about your inquiry..."
-                                            />
-                                        </div>
-                                    </div>
-                                    {formStatus === 'success' && (
-                                        <div className="mt-4 p-4 bg-green-50 text-green-700 rounded-lg">
-                                            Message sent successfully!
-                                        </div>
-                                    )}
-                                    <button
-                                        type="submit"
-                                        disabled={formStatus === 'sending'}
-                                        className="w-full mt-6 bg-slate-900 text-white py-4 rounded-lg hover:bg-slate-800 transition-colors font-semibold disabled:opacity-50"
-                                    >
-                                        {formStatus === 'sending' ? 'Sending...' : 'Send Message'}
-                                    </button>
-                                </form>
-                            </div>
-                        </div>
-                    )}
-
-                    {/* Shopping Cart Sidebar */}
                     {showCart && (
                         <div className="fixed inset-0 z-50 overflow-hidden">
                             <div className="absolute inset-0 bg-black bg-opacity-50" onClick={() => setShowCart(false)} />
@@ -410,7 +275,6 @@
                         </div>
                     )}
 
-                    {/* Artwork Detail Modal */}
                     {selectedArt && (
                         <div className="fixed inset-0 z-50 overflow-y-auto bg-black bg-opacity-75 flex items-center justify-center p-4">
                             <div className="bg-white rounded-xl max-w-4xl w-full max-h-[90vh] overflow-y-auto">
@@ -427,17 +291,10 @@
                                                 src={selectedArt.image} 
                                                 alt={selectedArt.title}
                                                 className="w-full rounded-lg shadow-lg"
-                                                onError={(e) => {
-                                                    e.target.src = `https://via.placeholder.com/800x800/FF6B6B/FFFFFF?text=${selectedArt.title}`;
-                                                }}
                                             />
                                         </div>
                                         <div>
                                             <p className="text-gray-700 mb-4">{selectedArt.description}</p>
-                                            <blockquote className="text-sm italic text-gray-600 mb-6 border-l-4 border-slate-900 pl-4 py-2">
-                                                "{selectedArt.quote.quote}"
-                                                <footer className="text-xs font-semibold text-slate-900 mt-2">— {selectedArt.quote.artist}</footer>
-                                            </blockquote>
                                             <div className="space-y-3 mb-6">
                                                 <div className="flex justify-between border-b pb-2">
                                                     <span className="font-semibold">Artist:</span>
